@@ -1,13 +1,19 @@
 package com.example.School_App.SchoolApp.Services;
 
 import com.example.School_App.SchoolApp.Model.Course;
+import com.example.School_App.SchoolApp.Model.Student;
 import com.example.School_App.SchoolApp.Repository.CourseRepository;
-import com.example.School_App.SchoolApp.SchoolAppDto.CourseRequest;
+import com.example.School_App.SchoolApp.SchoolAppDto.CourseDto;
+import jakarta.transaction.Transactional;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.ActiveProfiles;
 
 
 import java.util.Arrays;
@@ -18,48 +24,48 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
+@ActiveProfiles("test")
 class CourseServiceTest {
 
-    @Mock
-   private CourseRepository courseRepository;
-
-    @InjectMocks
+    @Autowired
     private CourseService courseService;
+    @Autowired
+    private CourseRepository courseRepository;
+
+    @BeforeEach
+    void setUp(){
+        courseRepository.deleteAll();
+    }
+
 
     @Test
     void testToVerifyCourse(){
-        CourseRequest courseRequest = new CourseRequest("physic","phy101");
-        Course course = new Course(1L,"physic","phy101");
-        when(courseRepository.save(any(Course.class))).thenReturn(course);
+        CourseDto courseDto = new CourseDto("physic","phy101");
+         Course courses = courseService.addNewCourse(courseDto);
 
-        Course course1 = courseService.addNewCourse(courseRequest);
 
-        assertNotNull(course1);
-        assertEquals("physic", course1.getCourseName());
-        assertEquals("phy101", course1.getCourseCode());
+        assertNotNull(courses);
+        assertEquals("physic", courses.getCourseName());
+        assertEquals("phy101", courses.getCourseCode());
 
-        verify(courseRepository, times(1)).save(any(Course.class));
     }
 
     @Test
-    void testViewCourse(){
-        Course course = new Course(1L,"chemistry","chm101");
-        Course course1 = new Course(2L,"physics","phy101");
-        Course course2 = new Course(3L , "biology","bio101");
-        List<Course> courses = Arrays.asList(course, course1,course2);
+    void testViewAllCourse(){
+        CourseDto course = new CourseDto("chemistry","chm101");
+        CourseDto course1 = new CourseDto("physics","phy101");
+        CourseDto course2 = new CourseDto( "biology","bio101");
+        courseService.saveAllCoursesFromDto(List.of(course, course1, course2));
 
-        when(courseRepository.findAll()).thenReturn(courses);
-        List<Course> result = courseService.getStudentCourse();
+        List<CourseDto> result = courseService.getStudentCourse();
 
         assertNotNull(result);
         assertEquals(3, result.size());
         assertEquals("chemistry", result.get(0).getCourseName());
         assertEquals("physics", result.get(1).getCourseName());
-        assertEquals(1L, result.get(0).getCourseId());
         assertEquals("phy101", result.get(1).getCourseCode());
 
-        verify(courseRepository, times(1)).findAll();
     }
 
 
