@@ -3,67 +3,66 @@ package com.example.School_App.SchoolApp.Services;
 import com.example.School_App.SchoolApp.Model.Student;
 import com.example.School_App.SchoolApp.Repository.StudentRepository;
 import com.example.School_App.SchoolApp.SchoolAppDto.StudentDto;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
+import org.springframework.test.context.ActiveProfiles;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-
-
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
 class StudentServiceTest {
 
-    @Mock
+    @Autowired
+   private  StudentService studentService;
+    @Autowired
     private StudentRepository studentRepository;
 
-    @InjectMocks
-   private  StudentService studentService;
-
+    @BeforeEach
+    void setUp(){
+        studentRepository.deleteAll();
+    }
 
     @Test
     void testToVerifyAddNewStudent(){
-
         StudentDto studentDto = new StudentDto("bala","bala@gmail.com","ss1");
-        Student student = new Student(1L,"bala","bala@gmail.com","ss1");
-       when(studentRepository.save(any(Student.class))).thenReturn(student);
 
        Student result = studentService.addNewStudent(studentDto);
 
        assertNotNull(result);
-       assertEquals(1L, result.getId());
+       assertEquals("bala@gmail.com", result.getEmail());
        assertEquals("bala", result.getName());
-
-        verify(studentRepository, times(1)).save(any(Student.class));
 
     }
 
     @Test
     void testToViewAllStudent(){
-        Student student1= new Student(1L,"musa","musa@gmail.com","ss1");
-        Student student = new Student(2L,"bala","bala@gmail.com","ss1");
-        Student student2 = new Student(3L,"yusuf","yusuf@gmail.com","ss1");
-        List<Student> students = Arrays.asList(student, student1, student2);
+        StudentDto student = new StudentDto("musa","musa@hotmail.com","ss1");
+        StudentDto student1 = new StudentDto("bala","bala@gmail.com","ss1");
+        studentService.saveAllStudents(List.of(student1, student));
 
-        when(studentRepository.findAll()).thenReturn(students);
-
-        List<Student> result = studentService.getStudents();
+        List<StudentDto> result = studentService.getStudents();
 
         assertNotNull(result);
-        assertEquals(3,result.size());
-        assertEquals("musa", result.get(1).getName());
+        assertEquals(2,result.size());
+        assertEquals("musa@hotmail.com", result.get(1).getEmail());
         assertEquals("bala", result.get(0).getName());
-        assertEquals("yusuf", result.get(2).getName());
-
-        verify(studentRepository, times(1)).findAll();
 
     }
+
+
+
 }
